レスポンシブデザイン

--- a/css/style.css
+++ b/css/style.css
@@ -26,14 +26,14 @@
   line-height: 300px;
 }
 
-/*-------------------------------------------------------------------------------------------------------------------------------*/
+/*Q1レスポンシブ前----------------------------------------------------------------------------------------------------------------*/
 .q1_box {
   width: 400px;
   height: 400px;
   background: #ff0000;
 }
 
-/*-----------------------------------------------------------------------------------------------------------------------------------*/
+/*Q2レスポンシブ前-----------------------------------------------------------------------------------------------------------------------*/
 .box_300 {
   width: 300px;
   height: 300px;
@@ -44,7 +44,7 @@
   background: #ff0000;
 }
 
-/*------------------------------------------------------------------------------------------------------------------------------------*/
+/*Q3レスポンシブ前----------------------------------------------------------------------------------------------------------------------*/
 .q3_box_b {
   background: #0008ff;
   margin-right: 150px;
@@ -54,7 +54,7 @@
   background: #22ff00;
 }
 
-/*-------------------------------------------------------------------------------------------------------------------------------------*/
+/*Q4レスポンシブ前-------------------------------------------------------------------------------------------------------------------------*/
 .q4_box_r {
   background: #ff0000;
   float: left;
@@ -65,7 +65,7 @@
   float: left;
 }
 
-/*-------------------------------------------------------------------------------------------------------------------------------------*/
+/*Q5レスポンシブ前------------------------------------------------------------------------------------------------------------------------*/
 .q5_box_a {
   background: #ff0000;
 }
@@ -77,7 +77,7 @@
 .q5_box_c {
   background: #ff8400;
 }
-/*---------------------------------------------------------------------------------------------------------------------------------------*/
+/*Q6レスポンシブ前--------------------------------------------------------------------------------------------------------------------------*/
 .q6_box_a {
   background: #00ff51;
 }
@@ -90,7 +90,7 @@
   background: #ff00e1;
 }
 
-/*----------------------------------------------------------------------------------------------------------------------------------------*/
+/*Q7レスポンシブ前-------------------------------------------------------------------------------------------------------------------------*/
 
 .q7_box_a {
   background: #ff0000;
@@ -105,7 +105,7 @@
   background: #00ff51;
 }
 
-/*---------------------------------------------------------------------------------------------------------------------------------------*/
+/*レスポンシブ後------------------------------------------------------------------------------------------------------------------------*/
 @media screen and (max-width:960px) {
   .q1_box {
     width: 200px;
@@ -126,10 +126,6 @@
 
   .q4_box_b {
     float: none;
-  }
-
-  .flex_position_q5 {
-    flex-direction: row-reverse;
   }
 
   .flex_position_q5 {
