レスポンシブデザイン

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,10 @@
 .q5_box_c {
   background: #ff8400;
 }
+
+.flex_position_q5 {
+  flex-direction: row;
+}
 /*Q6レスポンシブ前--------------------------------------------------------------------------------------------------------------------------*/
 .q6_box_a {
   background: #00ff51;
@@ -90,10 +94,15 @@
   background: #ff00e1;
 }
 
+.flex_position_q6 {
+  flex-direction: row;
+}
+
 /*Q7レスポンシブ前-------------------------------------------------------------------------------------------------------------------------*/
 
 .q7_box_a {
   background: #ff0000;
+  display: block;
 }
 
 .q7_box_b {
@@ -103,6 +112,7 @@
 
 .q7_box_c {
   background: #00ff51;
+  display: block;
 }
 
 /*レスポンシブ後------------------------------------------------------------------------------------------------------------------------*/
